# direct-link

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
backend/: .gitignore  Makefile  go.mod  go.sum
backend/cmd/sfu/: main.go
backend/cmd/signaling/: main.go
backend/configs/: livekit.yaml  sfu.toml
backend/internal/sfu/: config.go  server.go
backend/internal/signaling/: config.go  grpc.go  http.go  server.go
backend/pkg/session/: error.go  model.go  redis.go  store.go
backend/tests/integration/: redis_test.go
client/: CMakeLists.txt  Makefile  resources.qrc
client/src/: main.cpp
client/src/application/: Camera.qml  Footer.qml  Header.qml  Main.qml  SessionInfo.qml  SessionLog.qml  ThumbnailList.qml  main.qml
client/src/ui/: mainwindow.ui
shared/protocol/: signaling.proto
video-core/: CMakeLists.txt  Makefile
video-core/tests/manual/: encode_test.cpp  nvenc_test.cpp
